tests/transpiler/x/rs/pure_global_fold.rs
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:06 +0700
fn inc(x: i64) -> i64 {
    return (x + k)
}

fn main() {
    let k: i64 = 2;
    println!("{}", inc(3));
}
